# wireguard-uwp-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
app/: Cargo.toml
app/src/: main.rs
appx/: AppxManifest.xml
plugin/: Cargo.toml
plugin/src/: background.rs  config.rs  lib.rs  logging.rs  plugin.rs  utils.rs
