[package]
name = "wireguard-uwp-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WireGuard UWP VPN plugin."

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13"
boringtun = "0.3"
ipnetwork = "0.18"
quick-xml = { version = "0.22", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.11"

[dependencies.windows]
version = "0.28"
features = [
    "alloc",
    "build",
    "std",
    "ApplicationModel_Background",
    "ApplicationModel_Core",
    "Foundation_Collections",
    "Networking_Sockets",
    "Networking_Vpn",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WinRT",
]
